<resources>
    <string name="app_name" translatable="false">TousAntiGaspi</string>

    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="dlc_array">
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>5 days</item>
    </string-array>

    <string-array name="course_array">
        <item>Auchan</item>
        <item>Carrefour</item>
        <item>Leclerc</item>
        <item>Casino</item>
        <item>Système U</item>
    </string-array>

    <string name="need_register"><u>Need to be register?</u></string>
    <string name="need_login"><u>Already have an account? Log in!</u></string>
    <string name="create_first_fridge">Let\'s create your first fridge</string>
    <string name="name_fridge">Indicate the name of your fridge, and you can start adding your products!</string>
    <string name="hello_emoji" translatable="false">👋🏼</string>
    <string name="welcome">Welcome!</string>
    <string name="lets_go">Let\'s go</string>
    <string name="to_continue">Continue</string>
    <string name="whats_your_name">What\'s your name?</string>
    <string name="username">Username</string>
    <string name="log_in">Log in!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="quantity">Quantity</string>
    <string name="add_manually">Add manually</string>
    <string name="edit_frigo">Edit Fridge</string>
    <string name="add_frigo">Add Fridge</string>
    <string name="add_by_barcode">Add by barcode</string>
    <string name="name_of_product">Product Name</string>
    <string name="expiration_date">Expiration date</string>
    <string name="change_fridge_name">Change fridge name</string>
    <string name="new_fridge_name">New fridge name</string>
    <string name="settings">Settings</string>
    <string name="my_fridge">My Fridge</string>
    <string name="no_product_expires_soon">No products expire soon</string>
    <string name="your_products">Your products</string>
    <string name="hello">Hello</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="camera_permission_needed">You need the camera permission to use this feature!</string>
    <string name="error">An error occurred. Please try it later…</string>
    <string name="reset">Reset</string>
    <string name="deleteFrigo">Delete Fridge</string>
    <string name="shop_online">Shop online</string>
    <string name="all_input_required">All input are required</string>
    <string name="passwords_not_same">Passwords are not the same</string>
    <string name="unavailable">Unavailable</string>
    <string name="you_wont_waste">I hope you won\'t waste it!</string>
    <string name="location_permission_refused">You need to authorize the use of the localization to recover your position!</string>
    <string name="date_format">Days/Month/Years</string>
    <string name="gps_not_enabled">You need to enable the GPS to use your location</string>
    <string name="permission_not_granted">Permissions have not been granted!</string>
    <string name="click_start_code">Click to start scan</string>
    <string name="disconnect">Log out</string>
    <string name="choose_your_favorite_shop">Choose your favorite shop</string>
    <string name="wrong_password">Wrong password</string>
    <string name="user_not_found">User not found</string>
    <string name="username_exist">Username or email already exists</string>
    <string name="notify_me_before_expiration_date">Notify me before expiration date</string>
    <string name="send_notification_only_on_start">Send notification only on start</string>
    <string name="no_product_expired">No product expired soon</string>
    <string name="product_expired_soon">Product expired or expire soon  ⚠</string>
</resources>