<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inverse_rounded"
    tools:context=".activity.FirstConnexionActivity">


    <ImageView
        android:id="@+id/imageView"

        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:background="@drawable/colored_background"
        app:layout_constraintBottom_toTopOf="@+id/frigoInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/create_first_frigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/create_first_fridge"
        android:textColor="@color/main_grey_text_color"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline" />

    <TextView
        android:id="@+id/guide_text_frigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="96dp"
        android:justificationMode="inter_word"
        android:textAlignment="center"
        android:text="@string/name_fridge"
        android:textColor="@color/main_grey_text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/frigoInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/main_grey_text_color"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/underline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <TextView
        android:id="@+id/emojiView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_emoji"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/main_grey_text_color"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emojiView"
        app:layout_constraintVertical_bias="0.291" />

    <EditText
        android:id="@+id/frigoInput"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/rounded_edit_text"
        android:elevation="15dp"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/ic_kitchen_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_text_frigo"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/lets_go"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@drawable/rounded_button_grey"
        android:backgroundTint="@color/main_grey_text_color"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:text="@string/lets_go"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frigoInput"
        app:layout_constraintVertical_bias="0.376"
        app:layout_constraintWidth_percent="0.5" />

    <View
        android:id="@+id/underline"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="4dp"
        android:background="@color/main_grey_text_color"
        app:layout_constraintBottom_toTopOf="@+id/create_first_frigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <ImageButton
        android:id="@+id/useLocationFirstFrigoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_my_location_24" />


</androidx.constraintlayout.widget.ConstraintLayout>